--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,11 @@ td {
   color: #61dafb;
 }
 
+a {
+	color: #61dafb;
+	padding-bottom: 1em;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
