--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,11 @@ a {
 	padding-bottom: 1em;
 }
 
+ul li {
+	display: inline-block;
+	padding: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
